# astrodata

./: CMakeLists.txt  Makefile
debian/: .gitignore  README.Debian  changelog  control  copyright  files  rules  watch
include/: Generator.hpp  Observation.hpp  Platform.hpp  ReadData.hpp  SynthesizedBeams.hpp
src/: Observation.cpp  Platform.cpp  ReadData.cpp  SynthesizedBeams.cpp
